/home/fox/release/dtrace/2008/dtrace-20081228.tar.bz2

--- a/usdt/c/makefile
+++ b/usdt/c/makefile
@@ -10,6 +10,7 @@ all:	../../build/simple-c
 	$(CC) -Wl,-rpath `pwd` -o ../../build/simple-c $(BITS) simple_probes.o simple.o shlib.so -ldl
 
 simple_probes.o: simple.o simple_probes.d $(DTRACE_DRTI_O)
+	. ../../build/config.sh ; \
 	if [ "$$BUILD_i386" = 1 ]; then \
 		BITS=32 ; \
 	else \
