/home/fox/release/dtrace/2009/dtrace-20090105.tar.bz2

--- a/liblinux/makefile
+++ b/liblinux/makefile
@@ -15,7 +15,9 @@ $(LIB): \
 	$(LIB)(gmatch.o) \
 	$(LIB)(proc.o) \
 	$(LIB)(proc2.o) \
+	$(LIB)(proc_create.o) \
 	$(LIB)(proc_names.o) \
+	$(LIB)(proc_util.o) \
 	$(LIB)(rd.o) \
 	$(LIB)(strlcpy.o) \
 
