--- a/libproc/common/makefile
+++ b/libproc/common/makefile
@@ -8,7 +8,10 @@ CPPFLAGS += -I../common \
 	-DCTF_OLD_VERSIONS $(PTR32)
 CPPFLAGS += -D_LARGEFILE_SOURCE=1 -D_FILE_OFFSET_BITS=64
 
-LIB = ../../build/libproc.a
+LIB = ../../$(BUILD_DIR)/libproc.a
+
+all: $(LIB)
+	@/bin/true
 
 $(LIB): \
 	$(LIB)(P32ton.o) \
