--- a/usdt/c/makefile
+++ b/usdt/c/makefile
@@ -2,16 +2,18 @@
 CC=gcc -I../../uts/common -fPIC
 #BITS=-m64
 CFLAGS=$(BITS)
-DTRACE=../../build/dtrace
-DTRACE_DRTI_O=../../build/drti.o
+BINDIR=../../$(BUILD_DIR)
+DTRACE=$(BINDIR)/dtrace
+DTRACE_DRTI_O=$(BINDIR)/drti.o
 
-all:	../../build/simple-c
+all:	$(BINDIR)/simple-c
+	@/bin/true
 
-../../build/simple-c: simple_probes.o simple.o shlib.so $(DTRACE_DRTI_O)
-	$(CC) -Wl,-rpath `pwd` -o ../../build/simple-c $(BITS) simple_probes.o simple.o shlib.so -ldl
+$(BINDIR)/simple-c: simple_probes.o simple.o shlib.so $(DTRACE_DRTI_O)
+	$(CC) -Wl,-rpath `pwd` -o $(BINDIR)/simple-c $(BITS) simple_probes.o simple.o shlib.so -ldl
 
 simple_probes.o: simple.o simple_probes.d $(DTRACE_DRTI_O)
-	. ../../build/config.sh ; \
+	. $(BINDIR)/config.sh ; \
 	if [ "$$BUILD_i386" = 1 ]; then \
 		BITS=32 ; \
 	else \
