--- a/libdtrace/makefile
+++ b/libdtrace/makefile
@@ -1,4 +1,4 @@
-CC=gcc -g
+CC=gcc -g $(BUILD_BITS)
 CPPFLAGS += -I. \
 	-I../../common/ctf \
 	-I../uts/common \
@@ -99,7 +99,7 @@ $(BINDIR)/dt_lex.c: dt_lex.l
 	lex -t -v dt_lex.l > $(BINDIR)/dt_lex.c
 
 $(BINDIR)/drti.o: drti.c $(H)
-	$(CC) $(CPPFLAGS) -c drti.c
+	$(CC) $(BUILD_BITS) $(CPPFLAGS) -c drti.c
 	mv drti.o $(BINDIR)
 
 $(LIB)(dis_tables.o): ../driver/dis_tables.c $(H)
