--- a/driver/Makefile
+++ b/driver/Makefile
@@ -61,9 +61,21 @@ EXTRA_CFLAGS += \
 	-I$(M)/../../uts/common \
 	-D_KERNEL -DCTF_OLD_VERSIONS $(PTR32)
 
+######################################################################
+#   Handle  include  files  which  exist  or  moved  around amongst  #
+#   different kernel releases.					     #
+######################################################################
 EXTRA_CFLAGS += $(shell test -f include/asm/kdebug.h && echo -DHAVE_INCLUDE_ASM_KDEBUG_H)
 EXTRA_CFLAGS += $(shell test -f include/linux/kdebug.h && echo -DHAVE_INCLUDE_LINUX_KDEBUG_H)
 EXTRA_CFLAGS += $(shell test -f include/linux/hrtimer.h && echo -DHAVE_INCLUDE_LINUX_HRTIMER_H)
+EXTRA_CFLAGS += $(shell test -f include/linux/mutex.h && echo -DHAVE_INCLUDE_LINUX_MUTEX_H)
+EXTRA_CFLAGS += $(shell test -f include/asm/mutex.h && echo -DHAVE_INCLUDE_ASM_MUTEX_H)
+EXTRA_CFLAGS += $(shell test -f include/linux/stacktrace.h && echo -DHAVE_INCLUDE_LINUX_STACKTRACE_H)
+EXTRA_CFLAGS += $(shell test -f include/asm/stacktrace.h && echo -DHAVE_INCLUDE_ASM_STACKTRACE_H)
+EXTRA_CFLAGS += $(shell test -f include/linux/semaphore.h && echo -DHAVE_INCLUDE_LINUX_SEMAPHORE_H)
+EXTRA_CFLAGS += $(shell test -f include/asm/semaphore.h && echo -DHAVE_INCLUDE_ASM_SEMAPHORE_H)
+EXTRA_CFLAGS += $(shell test -f include/asm/msr-index.h && echo -DHAVE_INCLUDE_ASM_MSR_INDEX_H)
+EXTRA_CFLAGS += $(shell grep -s atomic.*count include/*/semaphore.h >/dev/null && echo -DHAVE_SEMAPHORE_ATOMIC_COUNT)
 
 clean:
 	rm -rf .tmp_versions *.a *.o *.ko *.bak .*.d .*.cmd *.mod.c Module.* modules.order
