/home/fox/release/dtrace/2009/dtrace-20090515.tar.bz2

--- a/etc/dtrace.conf
+++ b/etc/dtrace.conf
@@ -1,8 +1,24 @@
 # Example configuration file for permissioning dtrace.
 #
+# Format of the file is:
+#
+# clear             Empty the security table; useful if you need to reload
+#                   or change the security modelling without reloading the
+#                   driver.
+#
+# uid NNN [priv_proc | priv_owner | priv_kernel | priv_owner]
+# gid NNN [priv_proc | priv_owner | priv_kernel | priv_owner]
+#                   Allow specified uid or group id to have access to the
+#                   specified dtrace priviledge.
+#
+#                   Multiple priveleges can be specified (space separated)
+#
+# all [priv_proc | priv_owner | priv_kernel | priv_owner]
+#                   Apply priveleges to all user ids. Use this as a default.
+#
 # Following is a wide-open kernel - everyone can do anything from
 # inspecting kernel data structures, to probing any process
-all priv_kernel
+# all priv_kernel
 
 # Example of a locked down kernel
 uid 200 priv_proc
