/home/fox/release/dtrace/2009/dtrace-20090714.tar.bz2

--- a/libdtrace/makefile
+++ b/libdtrace/makefile
@@ -81,7 +81,7 @@ dt_errtags.c: dt_errtags.h mkerrtags.sh
 dt_names.c: mknames.sh
 	mknames.sh <../../uts/common/sys/dtrace.h | sed -e 's/\\n/\n/g' > dt_names.c
 
-dt_grammar.h $(LIB)(dt_grammar.o): dt_grammar.y $(H) 
+$(BINDIR)/dt_grammar.h $(LIB)(dt_grammar.o): dt_grammar.y $(H) 
 	$(YACC) -d dt_grammar.y
 	mv y.tab.h $(BINDIR)/dt_grammar.h
 	mv y.tab.c dt_grammar.c
@@ -91,7 +91,7 @@ dt_grammar.h $(LIB)(dt_grammar.o): dt_grammar.y $(H)
 
 #dt_grammar.h: $(LIB)(dt_grammar.o)
 
-$(LIB)(dt_lex.o): dt_grammar.h $(BINDIR)/dt_lex.c $(H)
+$(LIB)(dt_lex.o): $(BINDIR)/dt_grammar.h $(BINDIR)/dt_lex.c $(H)
 	$(CC) $(CPPFLAGS) -c $(BINDIR)/dt_lex.c
 	ar rv $(LIB) dt_lex.o
 	-rm -f dt_lex.o
