/home/fox/release/dtrace/2010/dtrace-20100825.tar.bz2

--- a/driver/Makefile
+++ b/driver/Makefile
@@ -53,7 +53,7 @@ endif
 obj-m := dtracedrv.o
 
 H	= dtrace_linux.h dtrace_proto.h
-EXTRA_CFLAGS += \
+EXTRA_CFLAGS += -g \
 	-I$(M) \
 	-I$(M)/../.. \
 	-I$(M)/../../include \
