/home/fox/release/dtrace/dtrace-20110318.tar.bz2

--- a/usdt/c/makefile
+++ b/usdt/c/makefile
@@ -22,7 +22,7 @@ $(BINDIR)/simple_probes.o: $(BINDIR)/simple.o simple_probes.d $(DTRACE_DRTI_O) $
 		BITS=64 ; \
 	fi ; \
 	echo DTRACE_DRTI_O=$(DTRACE_DRTI_O) $(DTRACE) -G -$$BITS -s simple_probes.d $(BINDIR)/simple.o ; \
-	DTRACE_DRTI_O=$(DTRACE_DRTI_O) $(DTRACE) -x nolibs -G -$$BITS -s simple_probes.d $(BINDIR)/simple.o
+	DTRACE_DRTI_O=$(DTRACE_DRTI_O) $(DTRACE) -G -$$BITS -s simple_probes.d $(BINDIR)/simple.o
 	mv simple_probes.o $(BINDIR)
 
 $(BINDIR)/simple.o: simple.c
