/home/fox/release/dtrace/dtrace-20111026.tar.bz2

--- a/driver/Makefile
+++ b/driver/Makefile
@@ -34,6 +34,7 @@ dtracedrv-objs := \
 	toxic.o \
 	instr_size.o \
 	uncompress.o \
+	vminfo.o \
 	x_call.o
 ifdef BUILD_i386
 	###############################################
