/home/fox/release/dtrace/dtrace-20111206.tar.bz2

--- a/driver/Makefile
+++ b/driver/Makefile
@@ -28,7 +28,7 @@ dtracedrv-objs := \
 	intr_x86-64.o \
 	libc.o \
 	missing.o \
-	panic.o \
+	printf.o \
 	profile.o \
 	prov_common.o \
 	sdt_linux.o \
