--- a/libdtrace/ip.sed.in
+++ b/libdtrace/ip.sed.in
@@ -19,11 +19,8 @@
  * CDDL HEADER END
  */
 /*
- * Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
- * Use is subject to license terms.
+ * Copyright (c) 2007, 2010, Oracle and/or its affiliates. All rights reserved.
  */
-
-#pragma ident	"@(#)ip.sed.in	1.1	07/05/16 SMI"
 
 /*
  * This file is a sed script which is first preprocessed by cpp or cc -E to
@@ -33,9 +30,49 @@
  * Refer to the rules in libdtrace/Makefile.com for more information.
  */
 
+#include <sys/netstack.h>
 #include <sys/socket.h>
+#include <netinet/in.h>
+#include <inet/ip.h>
+#include <inet/tcp.h>
 
 #define	SED_REPLACE(x)	s/#x/x/g
 
 SED_REPLACE(AF_INET)
 SED_REPLACE(AF_INET6)
+
+SED_REPLACE(IPH_DF)
+SED_REPLACE(IPH_MF)
+
+SED_REPLACE(IPPROTO_IP)
+SED_REPLACE(IPPROTO_HOPOPTS)
+SED_REPLACE(IPPROTO_ICMP)
+SED_REPLACE(IPPROTO_IGMP)
+SED_REPLACE(IPPROTO_GGP)
+SED_REPLACE(IPPROTO_ENCAP)
+SED_REPLACE(IPPROTO_TCP)
+SED_REPLACE(IPPROTO_EGP)
+SED_REPLACE(IPPROTO_PUP)
+SED_REPLACE(IPPROTO_UDP)
+SED_REPLACE(IPPROTO_IDP)
+SED_REPLACE(IPPROTO_IPV6)
+SED_REPLACE(IPPROTO_ROUTING)
+SED_REPLACE(IPPROTO_FRAGMENT)
+SED_REPLACE(IPPROTO_RSVP)
+SED_REPLACE(IPPROTO_ESP)
+SED_REPLACE(IPPROTO_AH)
+SED_REPLACE(IPPROTO_ICMPV6)
+SED_REPLACE(IPPROTO_NONE)
+SED_REPLACE(IPPROTO_DSTOPTS)
+SED_REPLACE(IPPROTO_HELLO)
+SED_REPLACE(IPPROTO_ND)
+SED_REPLACE(IPPROTO_EON)
+SED_REPLACE(IPPROTO_OSPF)
+SED_REPLACE(IPPROTO_PIM)
+SED_REPLACE(IPPROTO_SCTP)
+SED_REPLACE(IPPROTO_RAW)
+SED_REPLACE(IPPROTO_MAX)
+
+SED_REPLACE(TCP_MIN_HEADER_LENGTH)
+
+SED_REPLACE(GLOBAL_NETSTACKID)
