--- a/usdt/cpp/makefile
+++ b/usdt/cpp/makefile
@@ -8,7 +8,8 @@ DTRACE_DRTI_O=$(BINDIR)/drti.o
 all:	$(BINDIR)/simple-cpp
 
 $(BINDIR)/simple-cpp: simple_probes.h simple_probes.o simple.o shlib.so $(DTRACE_DRTI_O)
-	$(CC) -Wl,-rpath `pwd` -o $(BINDIR)/simple-cpp $(BITS) simple_probes.o simple.o shlib.so -ldl
+	cd $(BINDIR) ; \
+	$(CC) -Wl,-rpath `pwd` -o simple-cpp $(BITS) simple_probes.o simple.o shlib.so -ldl
 
 simple_probes.h: simple_probes.d
 	$(DTRACE) -h -s simple_probes.d
@@ -20,7 +21,7 @@ simple_probes.o: simple.o simple_probes.d $(DTRACE_DRTI_O)
 	else \
 		BITS=64 ; \
 	fi ; \
-	DTRACE_DRTI_O=$(DTRACE_DRTI_O) $(DTRACE) -G -$$BITS -s simple_probes.d simple.o
+	DTRACE_DRTI_O=$(DTRACE_DRTI_O) $(DTRACE) -x nolibs -G -$$BITS -s simple_probes.d simple.o
 
 shlib.so: shlib.c
 	$(CC) -fPIC -c shlib.c
