789* driver/intr.c, driver/intr_x86-64.S, driver/xen.c, driver/x_call.c           Attempt to get Xen IPI to work, but it wont. This means 	  using FBT or fast firing probes can result in kernel panics.

--- a/driver/Makefile
+++ b/driver/Makefile
@@ -44,7 +44,8 @@ dtracedrv-objs := \
 	toxic.o \
 	uncompress.o \
 	vminfo.o \
-	x_call.o
+	x_call.o \
+	xen.o
 ifdef BUILD_i386
 	###############################################
 	#   Kernel  may  be  using  -regparm, and we  #
