811* Various: User-mode DTrace compiles on ARM (dtrace cmd runs           but does not currently get passed the USDT behavior); some 	  stuff stubbed out in libproc.

--- a/tests/makefile
+++ b/tests/makefile
@@ -14,5 +14,8 @@ all:
 	  i686) \
 		$(CC) -m32 -g -o $(BINDIR)/sys32 syscalls.c ; \
 		;; \
+	  arm*) \
+		$(CC) -g -o $(BINDIR)/sys32 syscalls.c ; \
+		;; \
 	esac
 
