823* tools/load.pl: Fix for missing ia32_sys_call_table on amd64           kernel.

--- a/driver/Makefile
+++ b/driver/Makefile
@@ -63,6 +63,7 @@ ifdef BUILD_i386
 	dtracedrv-objs += ../libgcc.a
 endif
 ifdef BUILD_ARM
+	dtracedrv-objs += intr_arm.o 
 	dtracedrv-objs += arm_divmod64.o 
 endif
 
