Add support for SDT probes.

--- a/cmd/ctfconvert/makefile
+++ b/cmd/ctfconvert/makefile
@@ -54,7 +54,7 @@ all:
 	@. ../../build/port.sh ; \
 	if [ ! -f /usr/lib/libdwarf.a -a ! -f /usr/lib64/libdwarf.a ]; then \
 		echo "=================================================================" ; \
-		echo "=== You need /usr/lib/libdwarf.a or /ur/lib64/libdwarf.a " ; \
+		echo "=== You need /usr/lib/libdwarf.a or /usr/lib64/libdwarf.a " ; \
 		echo "=== (libdw is not yet supported) to build." ; \
 		echo "=== " ; \
 		echo "=== apt-get install binutils-dev" ; \
